--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     top: 610px;
     border-radius: 20px;
     margin-left: -40px;
-">高考加油^-^</div>
+">高考加油<br>^-^</div>
     <input id="timesInput" type="number" min="30" step="1" max="130" value="30"></input>
     <audio id='audioPlay1' src='jiepai_jixie.wav' controls="controls" style="visibility: hidden;">
       你的浏览器居然不支持audio？！赶快换一个吧！！
